# PDF-Comparator

./: README.md  app.py  config.toml  export_utils.py  pdf_processor.py  pyproject.toml  text_comparison.py  utils.py
